--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myhabits_v2.0",
   "version": "0.9.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
