Add homepage for this react app

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "myhabits_v2.0",
-  "version": "0.9.5",
+  "name": "myhabits",
+  "version": "1.0.1",
   "private": false,
+  "homepage": "https://fantomblackstart.github.io/my-habits",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
